fix: adjust padding for prose on smaller screens

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -60,8 +60,8 @@
   }
 }
 @media (max-width: 768px) {
-  main {
-    padding: 1em 1em 0 1em;
+  .prose {
+    padding-bottom: 0;
   }
 }
 .tag-list {
